--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/Style/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <title>Amicale Motos Cyclos Occitanie</title>
+  <meta name="description" content="Retrouvez toutes les informations concernant le site officiel de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
 <body>
   
