--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2? family=Gloria+Hallelujah&display=swap" rel="feuille de style">
   <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
   <link rel="stylesheet" href="/Style/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <title>Amicale Motos Cyclos Occitanie</title>
