article new_year home page finished

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -66,8 +66,25 @@
   </nav>
 </header>
 <body>
-  <main>
+  <main class="">
+    <section class="mx-1">
+      <div class="accueil">
+        <h1 class="text-center my-2">Bienvenue</h1>
+        <article class="New_year mt-2">
+          <div class="row mx-0">
+            <div class="col px-1">
+              <div class="card text-center">
+                <div class="card-header">Site officiel de l'A.M.C.O FFM & Moto Cyclo Occitanie UFOLEP</div>
+                <div class="card-body">
+                  <p class="card-text">Les membres de l'équipe vous souhaitent une excellente année 2022 </p>
+                </div>
+              </div>
+            </div>
+          </div>
 
+        </article>
+      </div>
+    </section>
   </main>
 
 
