article_event home page finished

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -82,6 +82,28 @@
             </div>
           </div>
         </article>
+        <article class="article_event mt-2">
+          <div class="row mx-0">
+            <div class="col px-1">
+              <div class="card text-center">
+                <div class="card-header p-0">
+                  <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net">
+                  Evenement national 
+                  <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net"></a>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title py-2">Rencontre sportive</h5>
+                  <p class="card-text mb-0 pt-1">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous       rejoindre pour un moment sportif et festive.
+                  </p>
+                  <p class="card-text"><strong>Venez nous rejoindre</strong>
+                    <a href="/Index/evenement.html"> <img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30px" width="30px" alt="">  
+                    </a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </article>
      	</div> 
       <div class="footer">
         <div class="container text-center">
