article general_information home page finished

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -104,6 +104,20 @@
             </div>
           </div>
         </article>
+        <article class="general_information mt-2">
+          <div class="row mx-0">
+            <div class="col px-1">
+              <div class="card text-center">
+                <div class="card-header">INFORMATIONS GENERALE</div>
+                <div class="card-body">
+                  <p class="card-text">Suite à la double affilation du club (UFOLEP + FFM) et l'augmentation de 
+                    l'affiliation FFM <span class="adhésion text-danger"><br><strong> L'Adhésion au Club est passée à 20 €</strong></span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </article>
      	</div> 
       <div class="footer">
         <div class="container text-center">
