09 - Css on Home page finish

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="Nav">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col pt-1">
           <a class="navbar-brand text-warning" id="logo">Menu de Navigation</a>
         </div>
         <div class="col" id="btn_navbar">
@@ -66,11 +66,11 @@
   </nav>
 </header>
 <body>
-  <main class="">
+  <main>
     <section>
       <div class="accueil mx-1">
-        <h1 class="text-center my-2">Bienvenue</h1>
-        <article class="New_year mt-2">
+        <h1 class="text-center my-2">ACCUEIL</h1>
+        <article class="new_year mt-2">
           <div class="row mx-0">
             <div class="col px-1">
               <div class="card text-center">
@@ -95,7 +95,7 @@
                   <h5 class="card-title py-2">Rencontre sportive</h5>
                   <p class="card-text mb-0 pt-1">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous       rejoindre pour un moment sportif et festive.
                   </p>
-                  <p class="card-text"><strong>Venez nous rejoindre</strong>
+                  <p class="card-text"><strong>Venez nous rejoindre !!!</strong>
                     <a href="/Index/evenement.html"> <img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30px" width="30px" alt="">  
                     </a>
                   </p>
