--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -67,7 +67,7 @@
     <section>
       <div class="event mx-1">
         <h1 class="text-center my-2">Evènements du club</h1>        
-        <article class="event mt-2">
+        <article class="description mt-2">
           <div class="row mx-0">
             <div class="col px-1">
               <div class="card">
@@ -91,20 +91,64 @@
                     <u class="text-danger">nous avons également besoin de bénévole pour nous aidez à encadrer cet évènement</u></b>
                   </p>
                   <p class="card-text"> pour tout renseignement :
-                    <a href="mailto:john.doe@AMCO.com">john.dos@AMCO.com</a>
+                    <a href="mailto:john.doe@AMCO.com">john.doe@AMCO.com</a>
                  </p>
                  <div class="btn_participation">
                   <div class="float-left">
                     <button class="btn btn-warning" data-toggle="modal" data-target="#join_bénévole" type="button">Je participe à l'encadrement</button>
                   </div>
                   <div class="float-right">
-                    <button class="btn btn-success" data-toggle="modal" data-target="#join_pilote" type="button">Je participe en tant que Pilote</button>
+                    <button class="btn btn-success" data-toggle="modal" data-target="#join_pilote" type="button">Je participe en tant que Pilote      </button>
                   </div>
                 </div>
                 </div>
               </div>
             </div>
           </div>
+        <!-- MAnagement participation modal-->
+          <div class="modal fade" id="join_bénévole" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="join_modal_label"> Participer à l'évènement en tant que Bénévole</h5>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="form-group">
+                    <label for="name">Nom</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Dupont">
+                  </div>
+                  <div class="form-group">
+                    <label for="surname">Prénom</label>
+                    <input type="text" class="form-control" id="surname" name="surname" placeholder="François">
+                  </div>
+                  <div class="form-group">
+                    <label for="mail" class="form-label">Adresse e-mail</label>
+                    <div class="input-group has-validation">
+                      <span class="input-group-text" id="inputGroupPrepend">@</span>
+                      <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required placeholder="françois_dupont@moto.fr">
+                      <div class="invalid-feedback">
+                        Veuillez rentrer une adresse mail valide
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea class="form-control" name="message" id="message" rows="2"></textarea>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal" id="abort">Fermer</button>
+                <button type="button" class="btn btn-success" id="validation">Participer</button>
+              </div>
+            </div>
+          </div>
+          </div>
+        </article>
+        
+        <article>
+
         </article>
       </div>
       
