--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -105,7 +105,7 @@
               </div>
             </div>
           </div>
-        <!-- MAnagement participation modal-->
+        <!-- Management participation modal-->
           <div class="modal fade" id="join_bénévole" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -137,6 +137,58 @@
                     <textarea class="form-control" name="message" id="message" rows="2"></textarea>
                   </div>
                 </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal" id="abort">Fermer</button>
+                <button type="button" class="btn btn-success" id="validation">Participer</button>
+              </div>
+            </div>
+          </div>
+          </div>
+        <!-- Pilote participation modal -->
+          <div class="modal fade" id="join_pilote" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="join_modal_label"> Participer à l'évènement en tant que Pilote</h5>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="form-group">
+                    <label for="name">Nom</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Dupont">
+                  </div>
+                  <div class="form-group">
+                    <label for="surname">Prénom</label>
+                    <input type="text" class="form-control" id="surname" name="surname" placeholder="François">
+                  </div>
+                  <div class="form-group">
+                    <label for="mail" class="form-label">Adresse e-mail</label>
+                    <div class="input-group has-validation">
+                      <span class="input-group-text" id="inputGroupPrepend">@</span>
+                      <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required placeholder="françois_dupont@moto.fr">
+                      <div class="invalid-feedback">
+                        Veuillez rentrer une adresse mail valide
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea class="form-control" name="message" id="message" rows="2"></textarea>
+                  </div>
+                </form>
+                <div class="form-check form-check-inline" id="pilote">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox50" value="50cc">
+                  <label class="form-check-label" for="inlineCheckbox50">50cc</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox125" value="125cc">
+                  <label class="form-check-label" for="inlineCheckbox125">125cc</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="checkbox" id="inlineCheckbox250" value="250-450cc">
+                  <label class="form-check-label" for="inlineCheckbox250">250-450cc</label>
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal" id="abort">Fermer</button>
