09-table of official finished

--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -198,7 +198,7 @@
           </div>
           </div>
         </article>
-        <article class="participation my-3"><!--Officiel table participation-->
+        <article class="participation my-3"><!--table of officials participants-->
           <h5 class="text-center pt-2">Participants officiel</h5>
           <table class="table " id="table_participation">
             <thead class="thead-light">
@@ -243,9 +243,26 @@
             </tbody>
           </table>
         </article>
+        <article class="progress_bar"> <!-- progress bar event participation-->
+          <h5>Nombres de personnes qui participe à l'évènements</h5>
+          <div class="progress" id="bénévoles">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 60%" aria-valuenow="190" aria-valuemin="0"  aria-valuemax="300">190 / 300 Bénévoles
+            </div>
+          </div>
+          <div class="progress" id="50cc">
+            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 65%" aria-valuenow="40" aria-valuemin="0"  aria-valuemax="100">40 / 60 Pilotes : 50cc
+            </div>
+          </div>
+          <div class="progress" id="125cc">
+            <div class="progress-bar progress-bar-striped bg-warning text-black" role="progressbar" style="width: 75%" aria-valuenow="40" aria-valuemin="0"  aria-valuemax="60"> 50 / 60 Pilotes : 125cc
+            </div>
+          </div>
+          <div class="progress" id="250cc">
+            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0"  aria-valuemax="60"> 45 / 60 Pilotes : 250cc / 450cc
+            </div>
+          </div>
+        </article>
       </div>
-      
-      
       <div class="footer">
         <div class="container text-center">
           <div class="row py-3">
