--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2? family=Gloria+Hallelujah&display=swap" rel="feuille de style">
   <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="/Style/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <title>Amicale Motos Cyclos Occitanie</title>
   <meta name="description" content="Retrouvez toutes les informations concernant le site officiel de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
