--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -82,14 +82,14 @@
               </svg> Arize sur l'Hers
             </p>
             <p class="card-text">
-              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
-                <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .  857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-                <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0   0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0  0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-calendar-date" viewBox="0 0 16 16">
+                <path d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z"/>
+                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
               </svg> 14 & 15 Juillet 2025
             </p>
             <p class="card-text">
-              Le club organise une course d'endurance en relais et se continuera lors d'une soirée  autour d'un barbecue <br> <b> 
-              <u class="text-danger">nous avons également besoin de bénévole pour nous aidez à encadrer cet évènement</u></b>
+              Le club organise une course d'endurance en relais et se continuera lors d'une soirée  autour d'un barbecue <br> 
+              <b><u class="text-danger">nous avons également besoin de bénévole pour nous aidez à encadrer cet évènement</u></b>
             </p>
             <p class="card-text"> pour tout renseignement :
               <a href="mailto:john.doe@AMCO.com">john.dos@AMCO.com</a>
@@ -247,19 +247,19 @@
         <article class="progress_bar"> <!-- progress bar event participation-->
           <h5>Nombres de personnes qui participe à l'évènements</h5>
           <div class="progress" id="bénévoles">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 60%" aria-valuenow="190" aria-valuemin="0"  aria-valuemax="300">190 / 300 Bénévoles
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 63%" aria-valuenow="190" aria-valuemin="0"  aria-valuemax="300">190 / 300 Bénévoles
             </div>
           </div>
           <div class="progress" id="50cc">
-            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 65%" aria-valuenow="40" aria-valuemin="0"  aria-valuemax="100">40 / 60 Pilotes : 50cc
+            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 66%" aria-valuenow="40" aria-valuemin="0"  aria-valuemax="100">40 / 60 Pilotes : 50cc
             </div>
           </div>
           <div class="progress" id="125cc">
-            <div class="progress-bar progress-bar-striped bg-warning text-black" role="progressbar" style="width: 75%" aria-valuenow="40" aria-valuemin="0"  aria-valuemax="60"> 50 / 60 Pilotes : 125cc
+            <div class="progress-bar progress-bar-striped bg-warning text-dark" role="progressbar" style="width: 83%" aria-valuenow="40" aria-valuemin="0"  aria-valuemax="60"> 50 / 60 Pilotes : 125cc
             </div>
           </div>
           <div class="progress" id="250cc">
-            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0"  aria-valuemax="60"> 45 / 60 Pilotes : 250cc / 450cc
+            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 66%" aria-valuenow="50" aria-valuemin="0"  aria-valuemax="60"> 45 / 60 Pilotes : 250cc / 450cc
             </div>
           </div>
         </article>
