09-bf error spelling on event_page & enlargement modal

--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -92,7 +92,7 @@
               <b><u class="text-danger">nous avons également besoin de bénévole pour nous aidez à encadrer cet évènement</u></b>
             </p>
             <p class="card-text"> pour tout renseignement :
-              <a href="mailto:john.doe@AMCO.com">john.dos@AMCO.com</a>
+              <a href="mailto:john.doe@AMCO.com">john.doe@AMCO.com</a>
            </p>
            <div class="btn_participation">
              <div class="float-left">
