create new page (club_page), implementation structure html with nav&footer

--- a/Index/club.html
+++ b/Index/club.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbar_content">
         <ul class="navbar-nav nav-fill ">
           <li class="nav-item">
-            <a class="nav-link active disabled text-warning" aria-current="page" href="#">
+            <a class="nav-link" href="/Index/accueil.html">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
                 <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
               </svg> Accueil</a></li>
@@ -41,7 +41,7 @@
                 <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
               </svg> Evènements</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="/Index/club.html">
+            <a class="nav-link active disabled text-warning" aria-current="page" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewBox="0 0 16 16">
                 <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
               </svg> Le club</a></li>
@@ -68,57 +68,9 @@
 <body>
   <main>
     <section>
-      <div class="accueil mx-1">
-        <h1 class="text-center my-2">ACCUEIL</h1>
-        <article class="new_year mt-2">
-          <div class="row mx-0">
-            <div class="col px-1">
-              <div class="card text-center">
-                <div class="card-header">Site officiel de l'A.M.C.O FFM & Moto Cyclo Occitanie UFOLEP</div>
-                <div class="card-body">
-                  <p class="card-text">Les membres de l'équipe vous souhaitent une excellente année 2022 </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="article_event mt-2">
-          <div class="row mx-0">
-            <div class="col px-1">
-              <div class="card text-center">
-                <div class="card-header p-0">
-                  <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net">
-                  Evenement national 
-                  <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net"></a>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title py-2">Rencontre sportive</h5>
-                  <p class="card-text mb-0 pt-1">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous       rejoindre pour un moment sportif et festive.
-                  </p>
-                  <p class="card-text"><strong>Venez nous rejoindre !!!</strong>
-                    <a href="/Index/evenement.html"> <img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30px" width="30px" alt="">  
-                    </a>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="general_information mt-2">
-          <div class="row mx-0">
-            <div class="col px-1">
-              <div class="card text-center">
-                <div class="card-header">INFORMATIONS GENERALE</div>
-                <div class="card-body">
-                  <p class="card-text">Suite à la double affilation du club (UFOLEP + FFM) et l'augmentation de 
-                    l'affiliation FFM <span class="adhésion text-danger"><br><strong> L'Adhésion au Club est passée à 20 €</strong></span>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-     	</div> 
+      <div class="club">
+
+      </div>
       <div class="footer">
         <div class="container text-center">
           <div class="row py-3">
