09-article création club finished

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -69,8 +69,8 @@
   <main>
     <section>
       <div class="accueil mx-1">
-        <h1 class="text-center my-2">ACCUEIL</h1>
-        <article class="new_year mt-2">
+        <h1 class="text-center my-3">ACCUEIL</h1>
+        <article class="new_year">
           <div class="row mx-0">
             <div class="col px-1">
               <div class="card text-center">
