--- a/Index/club.html
+++ b/Index/club.html
@@ -68,9 +68,23 @@
 <body>
   <main>
     <section>
-      <div class="club">
-
+      <div class="club mx-1">
+        <h1 class="text-center my-3">le club</h1>
+        <article class="création_club">
+          <div class="row mx-0">
+            <div class="col px-1">
+              <div class="card">
+                <div class="card-header text-center">Création du club</div>
+                <div class="card-body text-justify mt-2 pt-2">
+                  <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
+                  <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </article>
       </div>
+
       <div class="footer">
         <div class="container text-center">
           <div class="row py-3">
