--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -66,8 +66,8 @@
   <main>
     <section>
       <div class="event mx-1">
-        <h1 class="text-center my-2">Evènements du club</h1>        
-        <article class="description mt-2">
+        <h1 class="text-center my-3">Evènements du club</h1>        
+        <article class="description">
           <div class="row mx-0">
             <div class="col px-1">
               <div class="card ">
