09-article modification du club finished

--- a/Index/club.html
+++ b/Index/club.html
@@ -71,13 +71,30 @@
       <div class="club mx-1">
         <h1 class="text-center my-3">le club</h1>
         <article class="création_club">
-          <div class="row mx-0">
-            <div class="col px-1">
+          <div class="row mx-1">
+            <div class="col px-0">
               <div class="card">
                 <div class="card-header text-center">Création du club</div>
                 <div class="card-body text-justify mt-2 pt-2">
                   <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
                   <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="modif_club">
+          <div class="row mx-1">
+            <div class="col px-0">
+              <div class="card">
+                <div class="card-header text-center">Modification du club</div>
+                <div class="card-body text-justify mt-2 pt-2">
+                  <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
+                  <p class="card-text text-decoration-underline">Tarif adhésion club :</p>
+                  <p class="card-text"><strong><mark> 20€</strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
+                  <p class="card-text"> Concernant le challenge UFOLEP vous trouverez toutes les informations sur le site
+                    <a href="http://www.ufocross.caubet.eu/"> Ufocross.</a>
+                  </p>
                 </div>
               </div>
             </div>
