09-article statuts du club finished

--- a/Index/club.html
+++ b/Index/club.html
@@ -100,8 +100,38 @@
             </div>
           </div>
         </article>
+        <article class="statuts_club">
+          <div class="row mx-1">
+            <div class="col px-0">
+              <div class="card">
+                <div class="card-header text-center text-danger">📜 Statuts du club 📜</div>
+                <div class="card-body">
+                  <ul class="list-group mt-2">
+                    <li class="list-group-item"><h5>Président :</h5>
+                      <p><b>SAINT-JOLY</b> Jean pierre <a href="mailto:j.pierrejoly@sfr.fr">📧</a></p>
+                    </li>
+                    <li class="list-group-item"><h5>Vices Président :</h5>
+                      <p><b>PEREZ</b> Louis <br> & <br> <b>VERGE</b> Gérard </p>
+                    </li>
+                    <li class="list-group-item"><h5>Trésorier :</h5>
+                      <p><b>SAINT-JOLY</b> Stéphan <a href="mailto:migdle@hotmail.com">📧</a></p>
+                    </li>
+                    <li class="list-group-item"><h5>Secrétaire :</h5>
+                      <p><b>VERGE</b> Elisabeth</p>
+                    </li>
+                    <li class="list-group-item"><h5>Conseillers Technique :</h5>
+                      <p><b>VIGNAUX</b> Michel <br> & <br> <b>GIROLA</b> Joël</p>
+                    </li>
+                    <li class="list-group-item"><h5>Formateur :</h5>
+                      <p><b>VERGE</b> Gérard</p>
+                    </li>
+                  </ul>
+                </div>
+            </div>
+            </div>
+          </div>
+        </article>
       </div>
-
       <div class="footer">
         <div class="container text-center">
           <div class="row py-3">
