09- css club page finished

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -69,7 +69,7 @@
   <main>
     <section>
       <div class="accueil mx-1">
-        <h1 class="text-center my-3">ACCUEIL</h1>
+        <h1 class="text-center my-3">Accueil</h1>
         <article class="new_year">
           <div class="row mx-1">
             <div class="col px-0">
