--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
   <title>Amicale Motos Cyclos Occitanie</title>
-  <meta name="description" content="Retrouvez toutes les informations concernant le site officiel de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
 <header>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="Nav">
