--- a/Index/club.html
+++ b/Index/club.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
   <title>Amicale Motos Cyclos Occitanie</title>
-  <meta name="description" content="Retrouvez toutes les informations concernant le site officiel de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <meta name="description" content="Retrouvez toutes les informations concernant la création du club ainsi que les dirigeants de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
 <header>
   <div class="first_banniere">
@@ -75,7 +75,7 @@
             <div class="col px-0">
               <div class="card">
                 <div class="card-header text-center">Création du club</div>
-                <div class="card-body text-justify mt-2 pt-2">
+                <div class="card-body mt-2 pt-2">
                   <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
                   <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
                 </div>
@@ -83,12 +83,12 @@
             </div>
           </div>
         </article>
-        <article class="modif_club">
+        <article class="modif_club mt-2">
           <div class="row mx-1">
             <div class="col px-0">
               <div class="card">
                 <div class="card-header text-center">Modification du club</div>
-                <div class="card-body text-justify mt-2 pt-2">
+                <div class="card-body mt-2 pt-2">
                   <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
                   <p class="card-text text-decoration-underline">Tarif adhésion club :</p>
                   <p class="card-text"><strong><mark> 20€</strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
@@ -100,7 +100,7 @@
             </div>
           </div>
         </article>
-        <article class="statuts_club">
+        <article class="statuts_club mt-2">
           <div class="row mx-1">
             <div class="col px-0">
               <div class="card">
@@ -131,6 +131,7 @@
             </div>
           </div>
         </article>
+        
       </div>
       <div class="footer">
         <div class="container text-center">
