09-modification font-size card header on status club

--- a/Index/club.html
+++ b/Index/club.html
@@ -104,7 +104,7 @@
           <div class="row mx-1">
             <div class="col px-0">
               <div class="card">
-                <div class="card-header text-center text-danger">📜 Statuts du club 📜</div>
+                <div class="card-header text-center text-danger">📜 Les statuts du club 📜</div>
                 <div class="card-body">
                   <ul class="list-group mt-2">
                     <li class="list-group-item"><h5>Président :</h5>
