09-contact form is complete

--- a/Index/contact.html
+++ b/Index/contact.html
@@ -24,7 +24,80 @@
 <body>
   <main>
     <section>
-      
+      <div class="contact_page">
+        <h1 class="text-center mt-3 py-2">Page de contact</h1>
+        <div class="formulaire">
+          <form class="needs-validation my-3 py-3" novalidate>
+            <div class="form-group col-8 m-auto">
+              <label for="nom" class="form-label">Nom de famille</label>
+              <input type="text" class="form-control" id="nom" placeholder="Dupont" required>
+              <div class="valid-feedback">
+                Ok
+              </div>
+            </div>
+            <div class="form-group col-8 m-auto">
+              <label for="surname" class="form-label">Prénom</label>
+              <input type="text" class="form-control" id="surname" placeholder="Marc" required>
+              <div class="valid-feedback">
+                Ok
+              </div>
+            </div>
+            <div class="form-group col-10 m-auto">
+              <label for="mail" class="form-label">Adresse e-mail</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend">@</span>
+                <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required>
+                <div class="invalid-feedback">
+                  Veuillez rentrer une adresse mail valide
+                </div>
+              </div>
+            </div> 
+            <div class="form-group col-5 m-auto">
+              <label for="cp">Code postal</label>
+              <input type="number" class="form-control" id="cp" placeholder="31000" required>
+              <div class="invalid-feedback">
+                Précisez un code postal valide.
+              </div>
+            </div>
+            <div class="form-group col-8 m-auto">
+              <label for="ville" class="form-label">Ville</label>
+              <input type="text" class="form-control" id="ville" placeholder="Toulouse" required>
+              <div class="invalid-feedback">
+               Précisez une ville
+              </div>
+            </div>
+            <div class="form-group col-12 m-auto">
+              <label for="FormControlContactMessage">Message</label>
+              <textarea class="form-control" id="FormControlContactMessage" rows="3"></textarea>                
+            </div>
+            <div class="form-group col-8 m-auto pt-2">
+              <div class="form-check form-check-inline col-6">
+                <input class="form-check-input" type="checkbox" id="moto_checkbox1" value="option1">
+                <label class="form-check-label" for="moto_checkbox1">Moto</label>
+              </div>
+              <div class="form-check form-check-inline col-4">
+                <input class="form-check-input" type="checkbox" id="vtt_checkbox2" value="option2">
+                <label class="form-check-label" for="vtt_checkbox2">Vtt</label>
+              </div>
+            </div>
+            <div class="form-group col-8 pt-3">
+              <div class="form-check">
+                <input class="form-check-input"  type="checkbox" id="condition_check" required>
+                <label class="form-check-label ml-2" for="condition_check">
+                  <a href="/Index/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
+                </label>
+                <div class="invalid-feedback">
+                  Vous devez accepter les conditions avant de valider.
+                </div>
+              </div>
+
+            </div>
+            <div class="button">
+              <button class="btn btn-success" type="submit">Valider le formulaire</button>
+            </div>
+          </form>
+        </div>
+      </div>
       <div class="footer">
         <div class="container text-center">
           <div class="row py-3">
