--- a/Index/contact.html
+++ b/Index/contact.html
@@ -92,7 +92,7 @@
               </div>
 
             </div>
-            <div class="button">
+            <div class="button ml-3">
               <button class="btn btn-success" type="submit">Valider le formulaire</button>
             </div>
           </form>
@@ -100,28 +100,26 @@
       </div>
       <div class="footer">
         <div class="container text-center">
-          <div class="row py-3">
-            <div class="col">
-              <div class="contact">
-                <span>Retrouvez-nous sur :</span>
-                <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
-                </a> 
-              </div>
+          <div class="row pt-3">
+            <div class="col-4">
+              <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png"width="60" height="25"></a> 
             </div>
-            <div class="col">
-              <div class="form_contact">
-                <span>Pour tout contact :</span>
-                <a href="/Index/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewBox="0 0 16 16">
-                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                  <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
-                </svg>
-                </a> 
-              </div>
+            <div class="col-4">  
+              <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg"width="60" height="25"></a> 
+            </div>
+            <div class="col-4">
+              <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg"width="60" height="25"></a> 
             </div>
           </div>
-          <div class="row">
-            <div class="col " id="copyright">
-              <p>Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+          <div class="row pt-3">
+            <div class="col">
+              <span>Retrouvez-nous sur :</span>
+              <a class="ml-2" href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895"><img src="/Annexe/Images/Icone/Facebook.png"width="20" height="20"></a> 
+            </div>
+          </div>
+          <div class="row pt-3">
+            <div class="col" id="copyright">
+              <p>Copyright ©<script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p> 
             </div>
           </div>
         </div>
