--- a/Index/contact.html
+++ b/Index/contact.html
@@ -13,7 +13,7 @@
 </head>
 <header>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="text-warning mx-auto"  id="home" href="/index/accueil.html"> 
+    <a class="text-warning mx-auto pb-2"  id="home" href="/index/accueil.html"> 
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-caret-left-square" viewBox="0 0 16 16">
         <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
         <path d="M10.205 12.456A.5.5 0 0 0 10.5 12V4a.5.5 0 0 0-.832-.374l-4.5 4a.5.5 0 0 0 0 .748l4.5 4a.5.5 0 0 0 .537.082z"/>
@@ -24,10 +24,10 @@
 <body>
   <main>
     <section>
-      <div class="contact_page">
-        <h1 class="text-center mt-3 py-2">Page de contact</h1>
+      <div class="contact_page mx-1">
+        <h1 class="text-center my-2 pb-4">Page de contact</h1>
         <div class="formulaire">
-          <form class="needs-validation my-3 py-3" novalidate>
+          <form class="needs-validation pt-1" novalidate>
             <div class="form-group col-8 m-auto">
               <label for="nom" class="form-label">Nom de famille</label>
               <input type="text" class="form-control" id="nom" placeholder="Dupont" required>
@@ -80,10 +80,10 @@
                 <label class="form-check-label" for="vtt_checkbox2">Vtt</label>
               </div>
             </div>
-            <div class="form-group col-8 pt-3">
+            <div class="form-group col-10 pt-3">
               <div class="form-check">
-                <input class="form-check-input"  type="checkbox" id="condition_check" required>
-                <label class="form-check-label ml-2" for="condition_check">
+                <input class="form-check-input" type="checkbox" id="condition_check" required>
+                <label class="form-check-label" for="condition_check">
                   <a href="/Index/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
                 </label>
                 <div class="invalid-feedback">
