09- correction of the semantics on the Event page

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -65,96 +65,93 @@
     </div>
   </nav>
 </header>
-<body>
-  <main>
-    <section>
-      <div class="accueil mx-1">
-        <h1 class="text-center my-3">Accueil</h1>
-        <article class="new_year">
-          <div class="row mx-1">
-            <div class="col px-0">
-              <div class="card text-center">
-                <div class="card-header">Site officiel de l'A.M.C.O FFM & Moto Cyclo Occitanie UFOLEP</div>
-                <div class="card-body">
-                  <p class="card-text">Les membres de l'équipe vous souhaitent une excellente année 2022 </p>
+<body class="d-flex flex-column">
+  <main class="flex-shrink-0">
+    <div class="container px-1">
+        <section>
+          <div class="accueil text-center">
+            <h1 class="my-3">Accueil</h1>
+            <article class="new_year mb-2 ">
+              <div class="row ">
+                <div class="col ">
+                  <div class="card">
+                    <div class="card-header">Site officiel de l'A.M.C.O FFM & Moto Cyclo Occitanie UFOLEP</div>
+                    <div class="card-body">
+                      <p class="card-text">Les membres de l'équipe vous souhaitent une excellente année 2022 </p>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </article>
-        <article class="article_event mt-2">
-          <div class="row mx-1">
-            <div class="col px-0">
-              <div class="card text-center">
-                <div class="card-header p-0">
-                  <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net">
-                  Evenement national 
-                  <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net"></a>
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title py-2">Rencontre sportive</h5>
-                  <p class="card-text mb-0 pt-1">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous       rejoindre pour un moment sportif et festive.
-                  </p>
-                  <p class="card-text"><strong>Venez nous rejoindre !!!</strong>
-                    <a href="/Index/evenement.html"> <img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30px" width="30px" alt="">  
-                    </a>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="general_information mt-2">
-          <div class="row mx-1">
-            <div class="col px-0">
-              <div class="card text-center">
-                <div class="card-header">INFORMATIONS GENERALE</div>
-                <div class="card-body">
-                  <p class="card-text">Suite à la double affilation du club (UFOLEP + FFM) et l'augmentation de 
-                    l'affiliation FFM <span class="adhésion text-danger"><br><strong> L'Adhésion au Club est passée à 20 €</strong></span>
-                  </p>
+            </article>
+            <article class="article_event mb-2">
+              <div class="row ">
+                <div class="col">
+                  <div class="card">
+                    <div class="card-header p-0">
+                      <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net">
+                      Evenement national 
+                      <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net"></a>
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title py-2">Rencontre sportive</h5>
+                      <p class="card-text mb-0 pt-1">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous       rejoindre pour un moment sportif et festive.
+                      </p>
+                      <p class="card-text">
+                        <strong>Venez nous rejoindre !!!</strong>
+                        <a href="/Index/evenement.html"> <img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30px" width="30px" alt="">  
+                        </a>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </article>
-     	</div> 
-      <div class="footer">
-        <div class="container text-center">
-          <div class="row py-3">
-            <div class="col">
-              <div class="contact">
-                <span>Retrouvez-nous sur :</span>
-                <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
-                </a> 
+            </article>
+            <article class="general_information mb-2">
+              <div class="row">
+                <div class="col">
+                  <div class="card">
+                    <div class="card-header">INFORMATIONS GENERALE</div>
+                    <div class="card-body">
+                      <p class="card-text">Suite à la double affilation du club (UFOLEP + FFM) et l'augmentation de 
+                        l'affiliation FFM <span class="adhésion text-danger"><br><strong> L'Adhésion au Club est passée à 20 €</strong></span>
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="col">
-              <div class="form_contact">
-                <span>Pour tout contact :</span>
-                <a href="/Index/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewBox="0 0 16 16">
-                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                  <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
-                </svg>
-                </a> 
-              </div>
-            </div>
+            </article>
+          </div> 
+        </section>
+    </div>
+  </main>
+  <footer class="footer bg-dark text-light mt-auto ">
+    <div class="container pt-2">
+      <div class="row justify-content-center">
+        <div class="col-6 ">
+          <div class="contact text-center">
+            <span>Retrouvez-nous sur :</span>
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
+            </a> 
           </div>
-          <div class="row">
-            <div class="col " id="copyright">
-              <p>Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
-            </div>
+        </div>
+        <div class="col-6">
+          <div class="form_contact text-center">
+            <span>Pour tout contact :</span>
+            <a href="/Index/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewBox="0 0 16 16">
+              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+              <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+            </svg>
+            </a> 
           </div>
         </div>
       </div>
-
-    </section>
-  </main>
-
-
-
-
-
+      <div class="row justify-content-center pt-3">
+        <div class="col-12 text-center" id="copyright">
+          <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
