--- a/Index/contact.html
+++ b/Index/contact.html
@@ -21,111 +21,115 @@
     </a>    
   </nav>
 </header>
-<body>
-  <main>
-    <section>
-      <div class="contact_page mx-1">
-        <h1 class="text-center my-2 pb-4">Page de contact</h1>
-        <div class="formulaire">
-          <form class="needs-validation pt-1" novalidate>
-            <div class="form-group col-8 m-auto">
-              <label for="nom" class="form-label">Nom de famille</label>
-              <input type="text" class="form-control" id="nom" placeholder="Dupont" required>
-              <div class="valid-feedback">
-                Ok
-              </div>
-            </div>
-            <div class="form-group col-8 m-auto">
-              <label for="surname" class="form-label">Prénom</label>
-              <input type="text" class="form-control" id="surname" placeholder="Marc" required>
-              <div class="valid-feedback">
-                Ok
-              </div>
-            </div>
-            <div class="form-group col-10 m-auto">
-              <label for="mail" class="form-label">Adresse e-mail</label>
-              <div class="input-group has-validation">
-                <span class="input-group-text" id="inputGroupPrepend">@</span>
-                <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required>
-                <div class="invalid-feedback">
-                  Veuillez rentrer une adresse mail valide
+<body class="d-flex flex-column">
+  <main class="flex-shrink-0">
+    <div class="container mb-2">
+      <section>
+        <div class="contact_page mx-1">
+          <h1 class="text-center my-2 pb-4">Page de contact</h1>
+          <div class="formulaire">
+            <form class="needs-validation pt-1" novalidate>
+              <div class="form-group col-8 m-auto">
+                <label for="nom" class="form-label">Nom de famille</label>
+                <input type="text" class="form-control" id="nom" placeholder="Dupont" required>
+                <div class="valid-feedback">
+                  Ok
                 </div>
               </div>
-            </div> 
-            <div class="form-group col-5 m-auto">
-              <label for="cp">Code postal</label>
-              <input type="number" class="form-control" id="cp" placeholder="31000" required>
-              <div class="invalid-feedback">
-                Précisez un code postal valide.
-              </div>
-            </div>
-            <div class="form-group col-8 m-auto">
-              <label for="ville" class="form-label">Ville</label>
-              <input type="text" class="form-control" id="ville" placeholder="Toulouse" required>
-              <div class="invalid-feedback">
-               Précisez une ville
-              </div>
-            </div>
-            <div class="form-group col-12 m-auto">
-              <label for="FormControlContactMessage">Message</label>
-              <textarea class="form-control" id="FormControlContactMessage" rows="3"></textarea>                
-            </div>
-            <div class="form-group col-8 m-auto pt-2">
-              <div class="form-check form-check-inline col-6">
-                <input class="form-check-input" type="checkbox" id="moto_checkbox1" value="option1">
-                <label class="form-check-label" for="moto_checkbox1">Moto</label>
-              </div>
-              <div class="form-check form-check-inline col-4">
-                <input class="form-check-input" type="checkbox" id="vtt_checkbox2" value="option2">
-                <label class="form-check-label" for="vtt_checkbox2">Vtt</label>
-              </div>
-            </div>
-            <div class="form-group col-10 pt-3">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="condition_check" required>
-                <label class="form-check-label" for="condition_check">
-                  <a href="/Index/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
-                </label>
-                <div class="invalid-feedback">
-                  Vous devez accepter les conditions avant de valider.
+              <div class="form-group col-8 m-auto">
+                <label for="surname" class="form-label">Prénom</label>
+                <input type="text" class="form-control" id="surname" placeholder="Marc" required>
+                <div class="valid-feedback">
+                  Ok
                 </div>
               </div>
-
-            </div>
-            <div class="button ml-3">
-              <button class="btn btn-success" type="submit">Valider le formulaire</button>
-            </div>
-          </form>
+              <div class="form-group col-10 m-auto">
+                <label for="mail" class="form-label">Adresse e-mail</label>
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="inputGroupPrepend">@</span>
+                  <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required>
+                  <div class="invalid-feedback">
+                    Veuillez rentrer une adresse mail valide
+                  </div>
+                </div>
+              </div> 
+              <div class="form-group col-5 m-auto">
+                <label for="cp">Code postal</label>
+                <input type="number" class="form-control" id="cp" placeholder="31000" required>
+                <div class="invalid-feedback">
+                  Précisez un code postal valide.
+                </div>
+              </div>
+              <div class="form-group col-8 m-auto">
+                <label for="ville" class="form-label">Ville</label>
+                <input type="text" class="form-control" id="ville" placeholder="Toulouse" required>
+                <div class="invalid-feedback">
+                Précisez une ville
+                </div>
+              </div>
+              <div class="form-group col-12 m-auto">
+                <label for="FormControlContactMessage">Message</label>
+                <textarea class="form-control" id="FormControlContactMessage" rows="3"></textarea>                
+              </div>
+              <div class="form-group col-8 m-auto pt-2">
+                <div class="form-check form-check-inline col-6">
+                  <input class="form-check-input" type="checkbox" id="moto_checkbox1" value="option1">
+                  <label class="form-check-label" for="moto_checkbox1">Moto</label>
+                </div>
+                <div class="form-check form-check-inline col-4">
+                  <input class="form-check-input" type="checkbox" id="vtt_checkbox2" value="option2">
+                  <label class="form-check-label" for="vtt_checkbox2">Vtt</label>
+                </div>
+              </div>
+              <div class="form-group col-10 pt-3">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="condition_check" required>
+                  <label class="form-check-label" for="condition_check">
+                    <a href="/Index/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
+                  </label>
+                  <div class="invalid-feedback">
+                    Vous devez accepter les conditions avant de valider.
+                  </div>
+                </div>
+              </div>
+              <div class="button">
+                <button class="btn btn-success" type="submit">Valider le formulaire</button>
+              </div>
+            </form>
+          </div>
         </div>
-      </div>
-      <div class="footer">
-        <div class="container text-center">
-          <div class="row pt-3">
-            <div class="col-4">
-              <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png"width="60" height="25"></a> 
-            </div>
-            <div class="col-4">  
-              <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg"width="60" height="25"></a> 
-            </div>
-            <div class="col-4">
-              <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg"width="60" height="25"></a> 
-            </div>
-          </div>
-          <div class="row pt-3">
-            <div class="col">
-              <span>Retrouvez-nous sur :</span>
-              <a class="ml-2" href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895"><img src="/Annexe/Images/Icone/Facebook.png"width="20" height="20"></a> 
-            </div>
-          </div>
-          <div class="row pt-3">
-            <div class="col" id="copyright">
-              <p>Copyright ©<script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p> 
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </main>
+  <footer class="footer bg-dark text-light mt-auto">
+    <div class="container pt-3">
+      <div class="row justify-content-center text-center">
+        <div class="col-4">
+          <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png"width="60" height="25"></a> 
+        </div>
+        <div class="col-4">  
+          <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg"width="60" height="25"></a> 
+        </div>
+        <div class="col-4">
+          <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg"width="60" height="25"></a> 
+        </div>
+      </div>
+      <div class="row justify-content-center text-center">
+        <div class="col-12 pt-2 ">
+          <div class="contact">
+            <span>Retrouvez-nous sur :</span>
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
+            </a> 
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center text-center pt-2">
+        <div class="col-12 " id="copyright">
+          <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
