--- a/Index/photos.html
+++ b/Index/photos.html
@@ -38,7 +38,7 @@
                 <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
               </svg> Evènements</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="/Index/club.htmlgit add">
+            <a class="nav-link" href="/Index/club.html">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewBox="0 0 16 16">
                 <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
               </svg> Le club</a></li>
@@ -62,46 +62,48 @@
     </div>
   </nav>
 </header>
-<body>
-  <main>
-    <section>
-      <div class="photos mx-1">
-        <h1 class="text-center my-3">Photos</h1>
-        <p class="text-center font-weight-bold mx-3"> 
-          <img height="40px" src="/Annexe/Images/Icone/travaux-routiers.png"> PAGE EN CONSTRUCTION 
-          <img height="40px" src="/Annexe/Images/Icone/travaux-routiers.png">
-        </p>
-      </div>
-      <div class="footer">
-        <div class="container text-center">
-          <div class="row py-3">
-            <div class="col">
-              <div class="contact">
-                <span>Retrouvez-nous sur :</span>
-                <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
-                </a> 
-              </div>
-            </div>
-            <div class="col">
-              <div class="form_contact">
-                <span>Pour tout contact :</span>
-                <a href="/Index/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewBox="0 0 16 16">
-                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                  <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
-                </svg>
-                </a> 
-              </div>
-            </div>
+<body class="d-flex flex-column">
+  <main class="flex-shrink-0"> 
+    <div class="container mb-2">
+      <section>
+        <div class="photos mx-1">
+          <h1 class="text-center my-3">Photos</h1>
+          <p class="text-center font-weight-bold mx-3"> 
+            <img height="40px" src="/Annexe/Images/Icone/travaux-routiers.png"> PAGE EN CONSTRUCTION 
+            <img height="40px" src="/Annexe/Images/Icone/travaux-routiers.png">
+          </p>
+        </div>
+      </section>
+    </div>
+  </main>
+  <footer class="footer bg-dark text-light mt-auto ">
+    <div class="container pt-2">
+      <div class="row justify-content-center">
+        <div class="col-6 ">
+          <div class="contact text-center">
+            <span>Retrouvez-nous sur :</span>
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
+            </a> 
           </div>
-          <div class="row">
-            <div class="col " id="copyright">
-              <p>Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
-            </div>
+        </div>
+        <div class="col-6">
+          <div class="form_contact text-center">
+            <span>Pour tout contact :</span>
+            <a href="/Index/contact.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle text-danger" viewBox="0 0 16 16">
+              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+              <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+            </svg>
+            </a> 
           </div>
         </div>
       </div>
-    </section>
-  </main>
+      <div class="row justify-content-center pt-3">
+        <div class="col-12 text-center" id="copyright">
+          <p class="mb-1">Copyright @ <script>document.write(new Date().getFullYear());</script> by Micktar. Tous droits réservés.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
